--- a/style/style.css
+++ b/style/style.css
@@ -153,6 +153,7 @@ footer p{
 
 footer hr{
     border: 2px solid var(--lb);
+    background-color: var(--lb);
 }
 
 .fb{
@@ -379,11 +380,35 @@ footer hr{
     background-color: black;
     margin-left: 2rem;
     margin-right: 2rem;
+    margin-bottom: 5rem;
 }
 
 .personlige-p h2{
     font-family: 'nunito', sans-serif;
     text-align: center;
+    margin-top: 3rem;
+}
+
+.img-size{
+    background-image: url(/img/rain.jpg);
+    height: 200px;
+    background-size: cover;
+    background-position: center 60%;
+    margin-bottom: 1rem;
+}
+
+.img-size2{
+    background-image: url(/img/kode.png);
+    height: 200px;
+    background-size: cover;
+    background-position: center 60%;
+    margin-bottom: 1rem;
+    z-index: 2;
+}
+
+.img-size2 a{
+    width: 100%;
+    height: 200px;
 }
 
 .tidligere h2{
@@ -396,4 +421,17 @@ footer hr{
     background-color: black;
     margin-left: 2rem;
     margin-right: 2rem;
+    margin-bottom: 4rem;
+}
+
+.t-p a {
+    z-index: 1;
+    text-decoration: none;
+    color: black;
+}
+
+.p-p a {
+    z-index: 1;
+    text-decoration: none;
+    color: black;
 }
