--- a/style/style.css
+++ b/style/style.css
@@ -435,3 +435,422 @@ footer hr{
     text-decoration: none;
     color: black;
 }
+
+/* portefølje projekter */
+/* første projekt (DNR - rumrejse)*/
+/* Billedet */
+.h-l-b{
+    background-image: url(/img/Rumraket.png);
+    height: 200px;
+    background-size: cover;
+    background-position: cover 60%;
+    margin-bottom: 1rem;
+    margin: 30px;
+}
+
+/* overskrift */
+.hjemmesider h2{
+    text-align: center;
+    margin-top: 2rem;
+    font-family: 'nunito', sans-serif;
+}
+
+/* Tekst og link */
+.hjemmesider p{
+    text-align: center;
+    margin-left: 20px;
+    margin-right: 20px;
+    padding-left: 12px;
+    padding-right: 12px;
+    font-family: 'nunito', sans-serif;
+}
+
+.hjemmesider a{
+    text-decoration: none;
+    color: black;
+}
+
+.hjemmesider hr{
+    border: 1px solid black;
+    background-color: black;
+    margin-left: 1rem;
+    margin-right: 1rem;
+    margin-bottom: 3rem;
+}
+
+/* andet projekt (Dans, dans, dans 1. del)*/
+/* Billedet */
+.h-l-b2{
+    background-image: url(/img/dans.png);
+    height: 200px;
+    background-size: cover;
+    background-position: cover 60%;
+    margin-bottom: 1rem;
+    margin: 30px;
+}
+
+/* overskrift */
+.hjemmesider2 h2{
+    text-align: center;
+    margin-top: 2rem;
+    font-family: 'nunito', sans-serif;
+}
+
+/* Tekst og link */
+.hjemmesider2 p{
+    text-align: center;
+    margin-left: 20px;
+    margin-right: 20px;
+    padding-left: 12px;
+    padding-right: 12px;
+    font-family: 'nunito', sans-serif;
+}
+
+/* Tekst og link */
+.hjemmesider2 a{
+    text-decoration: none;
+    color: black;
+}
+
+.hjemmesider2 hr{
+    border: 1px solid black;
+    background-color: black;
+    margin-left: 1rem;
+    margin-right: 1rem;
+    margin-bottom: 3rem;
+}
+
+/* tredje projekt (dans, dans, dans. del 2)*/
+/* Billedet */
+.h-l-b3{
+    background-image: url(/img/dans\ 2.png);
+    height: 200px;
+    background-size: cover;
+    background-position: cover 60%;
+    margin-bottom: 1rem;
+    margin: 30px;
+}
+
+/* overskrift */
+.hjemmesider3 h2{
+    text-align: center;
+    margin-top: 2rem;
+    font-family: 'nunito', sans-serif;
+}
+
+/* Tekst og link */
+.hjemmesider3 p{
+    text-align: center;
+    margin-left: 20px;
+    margin-right: 20px;
+    padding-left: 12px;
+    padding-right: 12px;
+    font-family: 'nunito', sans-serif;
+}
+
+.hjemmesider3 a{
+    text-decoration: none;
+    color: black;
+}
+
+.hjemmesider3 hr{
+    border: 1px solid black;
+    background-color: black;
+    margin-left: 1rem;
+    margin-right: 1rem;
+    margin-bottom: 3rem;
+}
+
+/* fjerde projekt (bag rettet, del 1)*/
+/* Billedet */
+.h-l-b4{
+    background-image: url(/img/bag\ rettet\ ekstra.png);
+    height: 200px;
+    background-size: cover;
+    background-position: cover 60%;
+    margin-bottom: 1rem;
+    margin: 30px;
+}
+
+/* overskrift */
+.hjemmesider4 h2{
+    text-align: center;
+    margin-top: 2rem;
+    font-family: 'nunito', sans-serif;
+}
+
+/* Tekst og link */
+.hjemmesider4 p{
+    text-align: center;
+    margin-left: 20px;
+    margin-right: 20px;
+    padding-left: 12px;
+    padding-right: 12px;
+    font-family: 'nunito', sans-serif;
+}
+
+.hjemmesider4 a{
+    text-decoration: none;
+    color: black;
+}
+
+.hjemmesider4 hr{
+    border: 1px solid black;
+    background-color: black;
+    margin-left: 1rem;
+    margin-right: 1rem;
+    margin-bottom: 3rem;
+}
+
+/* femte projekt (video projekt)*/
+/* Billedet */
+.h-l-b5{
+    background-image: url(/img/video.png);
+    height: 200px;
+    background-size: cover;
+    background-position: center center;
+    margin-bottom: 1rem;
+    margin: 30px;
+}
+
+/* overskrift */
+.hjemmesider5 h2{
+    text-align: center;
+    margin-top: 2rem;
+    font-family: 'nunito', sans-serif;
+}
+
+/* Tekst og link */
+.hjemmesider5 p{
+    text-align: center;
+    margin-left: 20px;
+    margin-right: 20px;
+    padding-left: 12px;
+    padding-right: 12px;
+    font-family: 'nunito', sans-serif;
+}
+
+.hjemmesider5 a{
+    text-decoration: none;
+    color: black;
+}
+
+.hjemmesider5 hr{
+    border: 1px solid black;
+    background-color: black;
+    margin-left: 1rem;
+    margin-right: 1rem;
+    margin-bottom: 3rem;
+}
+
+/* sjette projekt (Bag rettet del 2)*/
+/* Billedet */
+.h-l-b6{
+    background-image: url(/img/bag\ rettet.png);
+    height: 200px;
+    background-size: cover;
+    background-position: cover 60%;
+    margin-bottom: 1rem;
+    margin: 30px;
+}
+
+/* overskrift */
+.hjemmesider6 h2{
+    text-align: center;
+    margin-top: 2rem;
+    font-family: 'nunito', sans-serif;
+}
+
+/* Tekst og link */
+.hjemmesider6 p{
+    text-align: center;
+    margin-left: 20px;
+    margin-right: 20px;
+    padding-left: 12px;
+    padding-right: 12px;
+    font-family: 'nunito', sans-serif;
+}
+
+.hjemmesider6 a{
+    text-decoration: none;
+    color: black;
+}
+
+.hjemmesider6 hr{
+    border: 1px solid black;
+    background-color: black;
+    margin-left: 1rem;
+    margin-right: 1rem;
+    margin-bottom: 5rem;
+}
+
+/* Undersider under projekter */
+
+/*bag rettet*/
+/* top */
+/*billede*/
+.B-R-2-B{
+    background-image: url(/img/bag\ rettet.png);
+    height: 200px;
+    background-size: cover;
+    background-position: cover 60%;
+    margin-bottom: 1rem;
+    margin: 30px;
+}
+
+/* tekst */
+.tekst h2{
+    text-align: center;
+    margin-top: 2rem;
+    font-family: 'nunito', sans-serif;
+}
+
+.tekst p{
+    text-align: center;
+    margin-top: 2rem;
+    font-family: 'nunito', sans-serif;
+    margin-left: 32px;
+    margin-right: 32px;
+}
+
+/* hr */
+
+.tekst hr{
+    border: 1px solid black;
+    background-color: black;
+    margin-left: 1rem;
+    margin-right: 1rem;
+    margin-bottom: 4rem;
+    margin-top: 3rem;
+}
+
+/* Under billeder om projekt*/
+/* logo */
+.Bag-Rettet2-logo{
+    background-image: url(/img/Logo-Bil1.png);
+    height: 200px;
+    background-size: cover;
+    background-position: center center;
+    margin-bottom: 1rem;
+    margin: 30px;
+}
+
+/* Posts på firmaets instargram */
+.br2s1{
+    background-image: url(/img/Lanceret-firma.png);
+    height: 200px;
+    background-size: cover;
+    background-position: center center;
+    margin: 30px;
+}
+
+.br2s2{
+    background-image: url(/img/Samarbejde.png);
+    height: 290px;
+    background-size: 100%;
+    margin: 30px;
+}
+
+/* video portræt */
+/* top */
+.v-b{
+    background-image: url(/img/video.png);
+    height: 200px;
+    background-size: cover;
+    background-position: center center;
+    margin-bottom: 1rem;
+    margin: 30px;
+}
+
+/* video */
+.v-p{
+    margin-bottom: 3rem;
+}
+
+/* bag rettet del 1 */
+/* top */
+.B-R-B{
+    background-image: url(/img/bag\ rettet\ ekstra.png);
+    height: 290px;
+    background-size: cover;
+    background-position: center 20%;
+    margin-bottom: 1rem;
+    margin: 30px;
+}
+
+/* logo Billede */
+.B-R-Logo{
+    background-image: url(/img/Khazer.png);
+    height: 280px;
+    background-size: cover;
+    background-position: center center;
+    margin: 30px;
+}
+
+/* Dans, dans, dans del 2 */
+
+.Dans2-top{
+    margin-bottom: 5rem;
+}
+
+/* top */
+.D-d-d2{
+    background-image: url(/img/dans\ 2.png);
+    height: 290px;
+    background-size: cover;
+    background-position: center 0;
+    margin-bottom: 1rem;
+    margin: 30px;
+}
+
+/* Logo billede */
+.b-logo{
+    background-image: url(/img/b-logo.png);
+    height: 300px;
+    background-size: cover;
+    background-position: center center;
+    margin-bottom: 1rem;
+    margin: 30px;
+}
+
+/* Dans dans dans del 1 */
+
+.dans-top{
+    margin-bottom: 5rem;
+}
+
+/* top */
+.B-R-T{
+    background-image: url(/img/dans.png);
+    height: 290px;
+    background-size: cover;
+    background-position: center 0;
+    margin-bottom: 1rem;
+    margin: 30px;
+}
+
+/* Rumrejsen DNR */
+
+.rumrejsen-top{
+    margin-bottom: 3rem;
+}
+
+/* top */ 
+.dnr-b{
+    background-image: url(/img/Rumraket.png);
+    height: 290px;
+    background-size: cover;
+    background-position: center 0;
+    margin-bottom: 1rem;
+    margin: 30px; 
+}
+
+/* billede lavet i photoshop */
+.dnr-r{
+    background-image: url(/img/Raket_sort.png);
+    height: 290px;
+    background-size: cover;
+    background-position: center center;
+    margin-bottom: 1rem;
+    margin: 30px; 
+}
